# ISRAT

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.cargo/: Config.toml
design/: .gitignore  color_codes.txt  design.odg  new_competition.md  settings.md
resources/: style.css
resources/icons/: icons_license.txt
src/: auto_save.rs  colors.rs  common.rs  constants.rs  main.rs  main_menu_bar.rs  screen_names.rs  state.rs
src/data/: import_export.rs  io.rs  mod.rs  read_write.rs
src/layout/: mod.rs
src/screens/: add_next_games_screen.rs  buttons.rs  erg_screen.rs  erg_view_screen.rs  group_overview.rs  home_screen.rs  mod.rs  my_input_text.rs  new_screen.rs  start_screen.rs
src/support/: clipboard.rs  mod.rs
src/tile/: mod.rs
src/widgets/: common.rs  enter_results.rs  group_overview.rs  group_screen.rs  home_screen.rs  match_history.rs  mod.rs  navbar.rs  new_screen.rs  table.rs  tile.rs  time_selector.rs
src/widgets/fix_indexed_list/: fix_indexed_list_entry.rs  fix_indexed_list_store.rs  mod.rs
src/widgets/home_screen/: last_competitions.rs  mod.rs  quick_settings.rs
src/widgets/new_competition/: base_information.rs  group_page.rs  group_team_object.rs  mod.rs  team_information.rs  team_name_position_object.rs  team_region_object.rs
src/widgets/settings/: mod.rs  settings_screen.rs
