[package]
name = "israt"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"
gdk4 = "0.6"
gtk4 = "0.6"
serde =  {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tectonic = "0.12"
timer = "0.2"

[dependencies.adw]
package = "libadwaita"
version = "0.3.1"
