[package]
name = "israt"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"
gdk4 = "0.7"
gtk4 = {version = "0.7", features = ["v4_10"]}
rand = "0.8.5"
serde =  {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
# tectonic = "0.14.1"
timer = "0.2"

[dependencies.adw]
package = "libadwaita"
version = "0.5"
